<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NASA Materials</string>
    <string name="photo_of_the_day_stub">Фото дня</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">Лайк Репост Круто</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="bottom_sheet_tools_text">This lovely starfield spans some four full moons (about 2 degrees) across the heroic northern constellation of Perseus. In telescopic exposures made during the nights of January 24, 26, and 28 it holds the famous pair of open or galactic star clusters h and Chi Persei with comet PanSTARRS (C/2017 T2) captured each night as it swept left to right across the field of view. Also cataloged as NGC 869 (right) and NGC 884, both star clusters are about 7,000 light-years away and contain stars much younger and hotter than the Sun. Separated by only a few hundred light-years, the clusters are both 13 million years young based on the ages of their individual stars, evidence that they were likely a product of the same star-forming region. Discovered in 2017 while still beyond the orbit of Saturn, Comet PanSTARRs is a new visitor to the inner solar system and just over 13 light-minutes from planet Earth. Always a rewarding sight in binoculars, the Double Cluster is even visible to the unaided eye from dark locations. C/2017 T2 could remain a telescopic comet though. One of the brightest comets anticipated in 2020 it makes its closest approach to the Sun in early May.\"</string>
    <string name="chip_text_today">Сегодня</string>
    <string name="chip_text_day_before_yesterday">Позавчера</string>
    <string name="chip_text_yesterday">Вчера</string>
    <string name="checkTheme">Выбери свою тему:</string>
    <string name="onLuneText">На луне</string>
    <string name="marsBeforeWarText">Марс до войны</string>
    <string name="morningPluto">Утро на Плутоне</string>
    <string name="earth">Земля</string>
    <string name="mars">Марс</string>
    <string name="system">Система</string>

    <string name="picture">Фото</string>
    <string name="planets">Планеты</string>
    <string name="crash">Разрушить</string>
    <string name="tap">ЖМИ</string>

    <string name="recycler">Recycler</string>
    <string name="Header">Заголовок</string>
    <string name="just_text">Дополнительный текст</string>
    <string name="notes">Notes</string>
    <string name="progress">progress</string>

</resources>