<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_view_earth"
        android:icon="@drawable/ic_earth"
        android:title="@string/picture" />

    <item
        android:id="@+id/action_view_planets"
        android:icon="@drawable/ic_mars"
        android:title="@string/planets" />
    <item
        android:id="@+id/app_bar_crash"
        android:icon="@drawable/ic_destroy"
        android:title="@string/crash" />

    <item
        android:id="@+id/app_bar_notes"
        android:icon="@drawable/ic_add_notes"
        android:title="@string/notes" />

    <item
        android:id="@+id/app_bar_settings"
        android:icon="@drawable/ic_system"
        android:title="@string/settings" />

</menu>
