<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?colorPrimary">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="@dimen/container_pod_padding_start"
        android:paddingEnd="@dimen/container_pod_padding_end">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="@dimen/text_input_layout_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_input_layout_margin"
            android:hint="@string/search_wiki"

            android:textColorHint="@color/black"
            app:boxBackgroundColor="?colorOnPrimary"
            app:boxStrokeColor="@color/black"
            app:counterEnabled="true"
            app:counterMaxLength="41"
            app:counterOverflowTextColor="@color/design_default_color_error"
            app:counterTextColor="@color/black"
            app:endIconCheckable="true"

            app:endIconDrawable="@drawable/ic_wikipedia"
            app:endIconMode="custom"
            app:helperText="@string/wiki_helper_text"

            app:helperTextTextColor="@color/black"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/material_card_box_for_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            app:cardCornerRadius="@dimen/card_view_picture_day_corn_radius"
            app:cardElevation="@dimen/card_view_picture_day_elevation"
            app:cardMaxElevation="@dimen/card_view_picture_day_corn_max_elevation"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_layout"
            app:layout_constraintVertical_bias="0.175">

            <com.maximmesh.nasamaterials.utils.EquilateralImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/photo_of_the_day_stub"
                app:srcCompat="@drawable/ic_no_photo_vector" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/progress_bar_width"
                android:layout_height="@dimen/progress_bar_height"
                android:layout_gravity="center"
                android:visibility="gone"
                tools:visibility="visible" />
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/bottom_sheet_layout" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>


